CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (MQ_PLATFORM)

INCLUDE_DIRECTORIES (/usr/local/include)

SET (CMAKE_C_FLAGS -g)
ADD_DEFINITIONS(-g -std=c99)
ADD_DEFINITIONS(-DMD_DEBUG)
ADD_DEFINITIONS(-D_GNU_SOURCE)

FIND_PACKAGE (Threads)
CONFIGURE_FILE (mq_config.h.in src/mq_config.h)
ADD_SUBDIRECTORY (src bin)
