#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT(mq_platform, 0.1, stupidlw@126.com)
AC_CONFIG_SRCDIR([mq_config.h.in])
AC_CONFIG_HEADERS([mq_config.h])

AM_INIT_AUTOMAKE(no-define foreign subdir-objects)
# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([zmq], [zmq_socket])

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_FORK
AC_CHECK_FUNCS([alarm gettimeofday memset strcasecmp])

AC_OUTPUT([Makefile])

